done pagination and documentation
