# docs/swagger.json
@@ -819,11 +819,31 @@
           "Recipes"
         ],
         "summary": "Get user's own recipes",
-        "description": "Retrieve all recipes created by the authorized user.",
+        "description": "Retrieve paginated recipes created by the authorized user.",
         "operationId": "getOwnRecipes",
         "security": [
           {
             "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "default": 1
+            },
+            "description": "Page number (starts from 1)"
+          },
+          {
+            "in": "query",
+            "name": "perPage",
+            "schema": {
+              "type": "integer",
+              "default": 12
+            },
+            "description": "Number of recipes per page"
           }
         ],
         "responses": {
@@ -840,12 +860,41 @@
                     },
                     "message": {
                       "type": "string",
-                      "example": "Successfully retrieved user's own recipes!"
+                      "example": "Successfully fetched own recipes!"
                     },
                     "data": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/recipe"
+                      "type": "object",
+                      "properties": {
+                        "recipes": {
+                          "type": "array",
+                          "items": {
+                            "$ref": "#/components/schemas/recipe"
+                          }
+                        },
+                        "page": {
+                          "type": "integer",
+                          "example": 2
+                        },
+                        "perPage": {
+                          "type": "integer",
+                          "example": 12
+                        },
+                        "totalResults": {
+                          "type": "integer",
+                          "example": 50
+                        },
+                        "totalPages": {
+                          "type": "integer",
+                          "example": 5
+                        },
+                        "hasPreviousPage": {
+                          "type": "boolean",
+                          "example": true
+                        },
+                        "hasNextPage": {
+                          "type": "boolean",
+                          "example": true
+                        }
                       }
                     }
                   }
@@ -868,11 +917,31 @@
           "Recipes"
         ],
         "summary": "Get favorite recipes",
-        "description": "Get all favorite recipes of the authorized user.",
+        "description": "Retrieve paginated favorite recipes of the authorized user.",
         "operationId": "getFavoriteRecipes",
         "security": [
           {
             "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "default": 1
+            },
+            "description": "Page number (starts from 1)"
+          },
+          {
+            "in": "query",
+            "name": "perPage",
+            "schema": {
+              "type": "integer",
+              "default": 12
+            },
+            "description": "Number of recipes per page"
           }
         ],
         "responses": {
@@ -889,12 +958,41 @@
                     },
                     "message": {
                       "type": "string",
-                      "example": "Successfully retrieved favorite recipes!"
+                      "example": "Successfully fetched favorite recipes!"
                     },
                     "data": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/recipe"
+                      "type": "object",
+                      "properties": {
+                        "recipes": {
+                          "type": "array",
+                          "items": {
+                            "$ref": "#/components/schemas/recipe"
+                          }
+                        },
+                        "page": {
+                          "type": "integer",
+                          "example": 1
+                        },
+                        "perPage": {
+                          "type": "integer",
+                          "example": 12
+                        },
+                        "totalResults": {
+                          "type": "integer",
+                          "example": 30
+                        },
+                        "totalPages": {
+                          "type": "integer",
+                          "example": 3
+                        },
+                        "hasPreviousPage": {
+                          "type": "boolean",
+                          "example": false
+                        },
+                        "hasNextPage": {
+                          "type": "boolean",
+                          "example": true
+                        }
                       }
                     }
                   }
